--- a/index.html
+++ b/index.html
@@ -8,19 +8,38 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
+        background-color: aquamarine;
     }
     #dice1, #dice2 {
         font-size: 36px;
         margin-bottom: 20px;
     }
+    .container{
+        background-color: rgb(34, 158, 30);
+        font-weight: bold;
+        border-radius: 100px;
+        padding: 20px 20px 20px 20px;
+    }
+    #btn{
+        border: 2px dashed;
+        background-color: rgb(145, 239, 6);
+        margin-bottom: 20px;
+        border-radius: 40px;
+        font-family: bold;
+        color: black;
+        width: 60px;
+    }
+    
 </style>
 </head>
 <body>
 
-<h1>Two Player Dice Game</h1>
+<div class="container">
+    <h1>Two Player Dice Game</h1>
 <p>Player 1: <span id="dice1">?</span></p>
 <p>Player 2: <span id="dice2">?</span></p>
-<button onclick="rollDice()">Roll Dice</button>
+<button id="btn"  onclick="rollDice()">Roll Dice</button>
+</div>
 
 <script>
 function rollDice() {
